# omp_confab

./: .project  CMakeLists.txt
dataset/: bostrom.sdf  original-borodina-subset.sdf  small-borodina-subset.sdf
parallel/: CMakeLists.txt  confab_mmff94.cpp  obenergy_mmff94.cpp  obminimize_mmff94.cpp  results_mmff94.cpp  validate_mmff94.cpp
